<resources>
    <string name="app_name">App Project</string>
    <string name="shoe_seller">Shoe Seller</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login2">Login</string>
    <string name="search_for_item">Search for Item:</string>
    <string name="search">Search</string>
    <string name="vans">Vans</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="create_a_new_account">Create a New Account</string>
    <string name="create_account2">Create Account!</string>
    <string name="admin">Admin</string>
    <string name="all_users">All Users</string>
    <string name="view_all_items">View All Items</string>
    <string name="add_item">Add Item</string>
    <string name="back">Back</string>
    <string name="logout">Logout</string>
    <string name="add_item2">Add Item</string>
    <string name="item_price">Item Price</string>
    <string name="item_name">Item Name</string>
    <string name="submit">Remove</string>
    <string name="enter_user">Enter Username</string>
    <string name="remove_user">Remove User</string>
    <string name="remove_item">Remove Item</string>
    <string name="remove_a_user">Remove a User</string>
    <string name="remove_user_by_username">Remove user by Username</string>
    <string name="remove_items_by_item_name">Remove Items by Item Name</string>
    <string name="enter_item_name">Enter Item Name</string>
    <string name="no_items">No Items have been added yet</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="cart">Cart</string>
    <string name="admin_menu">Admin Menu</string>
    <string name="search_for_item2">Search for Item</string>
    <string name="main_menu">Main Menu</string>
    <string name="delete_account">Delete Account</string>
    <string name="delete">Delete</string>
</resources>